syntax = "proto3";

package hvxahv.v1alpha1.proto;
option go_package = "github.com/hvxahv/hvxahv/api/channel/v1alpha1";

service AdministrativeService {
  // IsChannelAdministrator It is the admin that returns true not false.
  rpc IsChannelAdministrator(IsChannelAdministratorRequest) returns (IsChannelAdministratorResponse) {}
  rpc AddAdministrator(AddAdministratorRequest) returns (AddAdministratorResponse) {}
  rpc RemoveAdministrator(RemoveAdministratorRequest) returns (RemoveAdministratorResponse) {}
  rpc GetAdministrators(GetAdministratorsRequest) returns (GetAdministratorsResponse) {}
}

message IsChannelAdministratorRequest {
  string channel_id = 1;
  string account_id = 2;
}

message IsChannelAdministratorResponse {
  bool is_administrator = 1;
}

message AddAdministratorRequest {
  string channel_id = 1;
  string account_id = 2;
}

message AddAdministratorResponse {
  string code = 1;
  string reply = 2;
}

message RemoveAdministratorRequest {
  string owner_id = 1;
  string channel_id = 2;
  string account_id = 3;
}

message RemoveAdministratorResponse {
  string code = 1;
  string reply = 2;
}

message GetAdministratorsRequest {
  string channel_id = 1;
  string account_id = 2;
}

message GetAdministratorsResponse {
  string code = 1;
  repeated string administrators = 2;
}